--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "figlet": "^1.5.2",
     "fs": "^0.0.1-security",
     "inquirer": "^9.1.4",
-    "inquirer-prompt-suggest": "^0.1.0"
+    "inquirer-prompt-suggest": "^0.1.0",
+    "ora": "^6.1.2"
   },
   "type": "module"
 }
